Fix issue with merge button in customer duplicates (#510)
* Fix issue with merge button in customer duplicates

* Update src/Resources/public/js/CustomerDuplicates/frontend.js

* Removed unintended code

--- a/src/Resources/views/admin/duplicates/list.html.twig
+++ b/src/Resources/views/admin/duplicates/list.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
 
     {% do cmf_jsConfig().add('declineDuplicates', true) %}
+    {% do pimcore_head_script().appendFile(asset('/bundles/pimcorecustomermanagementframework/js/CustomerDuplicates/frontend.js')) %}
 
     <div class="container">
         <h2>{{ 'cmf_duplicates_potential_duplicates' | trans({}, 'admin') }}</h2>
